WIP: US-3: Restricting visibility of posts to specific groups (#36)
* added visibleTo field to database and in-memory data structure

* added post creation logic with visibleTo field

* added post filtering by visibility capability

* updated topics.reply to have visibility

* added logs and topics based visibility

* edited plugin details for composer + slight modification to dropdown list shown

* fixed test and lint errors

* teaser now respects post visibility + removed console logs

* Revert "teaser now respects post visibility + removed console logs"

This reverts commit 7226c401650174f64ee29918eb421f7cb700a541.

* now topics and posts are visible to author + groups it is restricted to

* added visibility filtering for teasers in sidebar

* num_topics and num_posts respect visibility settings

* test cases pass

* test cases for visibility

* Add/Update package.json (force-added despite .gitignore)

* removed console logs

* removed api logs
