# public/openapi/read/index.yaml
@@ -198,6 +198,12 @@ get:
                                         type: string
                                       title:
                                         type: string
+                                  visibleTo:
+                                    type: array
+                                    items:
+                                      type: string
+                                    description: Array of group names that can see this post
+                                    nullable: true
                             teaser:
                               type: object
                               properties:
